/*
 * $Id: ChangeLog,v 1.5594 2007/05/31 13:06:42 walito Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-05-31 11:00 UTC-0300 Walter Negro <anegro at overnet.com.ar>
  * source/vm/fm.c
    ! Void variable unused warning, reported by Enrico Giordano

2007-05-31 10:03 UTC-0300 Walter Negro <anegro at overnet.com.ar>
  * source/vm/fm.c
    ! Add #undef hb_xautorelease()

2007-05-31 10:00 UTC-0300 Ranier Vilela <ranier/at/cultura.com.br>
  * source/rtl/str.c
    * Remove redudant memory setting (at line 140).

2007-05-31 02:01 UTC-0300 Walter Negro <anegro at overnet.com.ar>
  * include/hbvmpub.h
  * source/vm/classes.c
  * source/vm/hvm.c
    ! Fix error using ERROR HANDLER method in MT program.
      Now the symbol (PHB_SYMB) returned by hb_objGetMthd() when return the
      symbol of ERROR HANDLER method, is cloned.
      This memory should be released after use. See hb_objGetMethod() and hb_vmSend().
  * include/hbapi.h
  * source/vm/fm.c
    + Add funcion hb_xautorelease( void *) to set a memory block to auto release
      at the end of program and avoid memory leak report.  

2007-05-30 16:01 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * source/tip/client.prg
    + Added support for Cargo variable

2007-05-30 09:30 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/win32prn.prg
    * changed && => & for FIXED_PITCH and TRUETYPE_FONTTYPE in FontEnumCallBack()
      ( reported on Google newsgroup )

2007-05-29 20:00 UTC+0100 Hannes Ziegler <hz@knowleXbase.com>
  * tests/tiptest/dnldftp.prg
  * tests/tiptest/uploadftp.prg
  * tests/tiptest/ftpadv.prg
  * tests/tiptest/httpadv.prg
  * tests/tiptest/tiptest.prg
    * changed tests to work with changed TIP classes

   /*
      NOTE: TIP classes are currently out of order due to broken Sockets functions
    */
